# comparative-genomics-pipeline

./: .coverage  .gitignore  CLAUDE.md  CLAUDE_FEATURE_REQUEST_TEMPLATE.md  Dockerfile  ENHANCEMENTS.md  README.md  demo.py  entrypoint.sh  pyproject.toml
data/input/: genes_to_proteins.json
data/output/: CACNA1H.fasta  GABRA1.fasta  KCNQ2.fasta  SCN2A.fasta
data/output/conservation/: CACNA1H_conservation.csv  DEPDC5_conservation.csv  GABRA1_conservation.csv  KCNQ2_conservation.csv  SCN1A_conservation.csv  SCN2A_conservation.csv
data/output/msa/: CACNA1H.fasta  DEPDC5.fasta  GABRA1.fasta  KCNQ2.fasta  SCN1A.fasta  SCN2A.fasta  clustalo-R20250624-211214-0433-78892940-p1m.fasta  clustalo-R20250624-211229-0655-69004726-p1m.fasta  clustalo-R20250624-211259-0987-10148888-p1m.fasta
data/output/orthologs/: CACNA1H.fasta  DEPDC5.fasta  GABRA1.fasta  KCNQ2.fasta  SCN1A.fasta  SCN2A.fasta
data/output/structures/: P35498_domains.json
data/output/trees/: CACNA1H.nwk  DEPDC5.nwk  GABRA1.nwk  KCNQ2.nwk  SCN1A.nwk  SCN2A.nwk
data/output/variants/: DEPDC5_clinvar_variants.csv  DEPDC5_variants.csv  P35498_variants.csv  SCN1A_clinvar_variants.csv
data/results/: msa.md
data/results/conservation/: SCN1A_conservation.md
docs/: early_hypothesis_research.md  ebi_api.md  jalview.md  reference_papers.md  requirements.md  requirements_notes.md  research_log.md  uniprot.md
docs/tools/: ensembl.md  ortho_db.md
src/comparative-genomic-analysis/: main.py
src/comparative_genomics_pipeline/: __init__.py  __main__.py
src/comparative_genomics_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: test_pipeline_workflow.py
tests/unit/: test_biopython_service_simple.py  test_config_validation.py  test_conservation_analysis.py  test_ebi_client.py  test_msa_processing.py  test_phylogenetic_analysis.py  test_scientific_plots.py  test_uniprot_client.py  test_variant_conservation_mapping.py
(+24 files in other folders)
