[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comparative-genomics-pipeline"
version = "0.1.0"
description = "Compare protein expression across groups with focus on key epilepsy-related genes"
authors = [
  { name = "William P", email = "author@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.24.1",
  "biopython",
  "matplotlib",
  "pandas",
  "scipy",
  "numpy"
]

[project.scripts]
comparative-genomics-pipeline = "comparative_genomics_pipeline.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
