[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comparative-genomics-pipeline"
version = "0.1.0"
description = "Compare protein expression across groups with focus on key epilepsy-related genes"
authors = [
  { name = "William P", email = "author@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.24.1",
  "biopython",
  "matplotlib",
  "pandas",
  "scipy",
  "numpy"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-mock>=3.10.0",
  "pytest-cov>=4.0.0"
]

[project.scripts]
comparative-genomics-pipeline = "comparative_genomics_pipeline.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=comparative_genomics_pipeline",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
    "api: Tests that require API access",
]
